--- a/app/src/main/res/navigation/page_hero.xml
+++ b/app/src/main/res/navigation/page_hero.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/hero_fragment"
-        android:name="com.turtle.multimodulehilt.HeroFragment"
+        android:name="com.turtle.multimodulehilt.feature.heros.HeroFragment"
         android:label="HeroFragment" />
 </navigation>
