Completed the function of bringing heroes from the Marvel API Server by applying the module architecture. (Marvel API : https://developer.marvel.com)

--- a/feature/avengers/src/main/res/layout/fragment_avengers.xml
+++ b/feature/avengers/src/main/res/layout/fragment_avengers.xml
@@ -5,18 +5,23 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".feature.avengers.AvengersFragment">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textview_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_1"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_hero_heroList"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarSize="5dp"
+            android:scrollbarThumbVertical="@drawable/scroll_bar"
+            android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:spanCount="1"
+            tools:listitem="@layout/list_item_hero" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
