--- a/feature/avengers/src/main/res/layout/fragment_avengers.xml
+++ b/feature/avengers/src/main/res/layout/fragment_avengers.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@android:color/background_dark"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,7 +21,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:spanCount="1"
             tools:listitem="@layout/list_item_hero" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
