Added image transition effects in module:feature:avengers

--- a/feature/avengers/src/main/res/layout/fragment_avengers_detail.xml
+++ b/feature/avengers/src/main/res/layout/fragment_avengers_detail.xml
@@ -11,11 +11,12 @@
         <ImageView
             android:id="@+id/imageview_avengers_detail_fragment_center"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="250dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            tools:src="@drawable/whoishe"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
