Added a hero-related comic image from marvel api to the AvengeDetail screen

--- a/feature/avengers/src/main/res/layout/fragment_avengers_detail.xml
+++ b/feature/avengers/src/main/res/layout/fragment_avengers_detail.xml
@@ -4,52 +4,89 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="hero"
             type="com.turtle.multimodulehilt.core.model.Hero" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@android:color/background_dark"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageview_avengers_detail_fragment_hero"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:src="@drawable/whoishe"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/background_dark">
 
-        <TextView
-            android:id="@+id/textview_avengers_detail_fragment_hero_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:layout_margin="20dp"
-            android:textSize="18sp"
-            android:text="@{hero.name}"
-            tools:text="A-Bomb (HAS)"
-            app:layout_constraintTop_toBottomOf="@+id/imageview_avengers_detail_fragment_hero"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <ImageView
+                android:id="@+id/imageview_avengers_detail_fragment_hero"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/whoishe" />
 
-        <TextView
-            android:id="@+id/textview_avengers_detail_fragment_hero_description"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:layout_margin="20dp"
-            android:textSize="18sp"
-            android:text="@{hero.description}"
-            tools:text="Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! "
-            app:layout_constraintTop_toBottomOf="@+id/textview_avengers_detail_fragment_hero_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                android:id="@+id/textview_avengers_detail_fragment_hero_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="@{hero.name}"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageview_avengers_detail_fragment_hero"
+                tools:text="A-Bomb (HAS)" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/textview_avengers_detail_fragment_hero_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="@{hero.description}"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_avengers_detail_fragment_hero_name"
+                tools:text="Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! " />
+
+            <TextView
+                android:id="@+id/textview_avengers_detail_fragment_hero_related_comics"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Related Comics: "
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_avengers_detail_fragment_hero_description" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_comic_heroList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:nestedScrollingEnabled="false"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_avengers_detail_fragment_hero_related_comics"
+                app:spanCount="2"
+                tools:listitem="@layout/list_item_comics" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </layout>
